force-app/main/default/objects/Project__c/fields/DULead__c.field-meta.xml
<CustomField>
    <fullName>DULead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DU Lead for respective Projects</description>
    <label>DU Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectDULeads</relationshipName>
    <type>Lookup</type>
</CustomField>