force-app/main/default/objects/Project__c/fields/ProjectLocation__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocation__c</fullName>
    <description>Project Location</description>
    <label>Project Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>